--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<div id="root"></div>
+<div>
+  <h1>React DDD</h1>
+
+  <div id="root"></div>
+
+  <pre>
+
+1- Formulario Post (OK)
+
+  1.2- Editar Post ()
+
+2- Post Item (OK)
+
+3- Colección de posts ()
+</pre
+  >
+</div>
